--- a/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
+++ b/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
@@ -1,8 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e6419c61",
+   "metadata": {},
+   "source": [
+    "# GapFilling : \n",
+    "\n",
+    "La méthode du GapFilling permet de créer des images interpolées et désenuagées. Le GapFilling est une interpolation temporelle, elle reprend une grande partie, celle mise en place dans la chaîne de traitement automatique iota2 :\n",
+    "\n",
+    " * à l’aide de masques de nuages comme celles fournies pour le produit S2 de niveau L2A, remplacer les pixels « nuageux » par une estimation de la réflectance réelle, réalisée à partir des valeurs valides plus proches en date.\n",
+    " * effectuer un rééchantillonnage temporel, en réalisant le même type d’opération pour produire des séries temporelles couvrant régulièrement la période de référence"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "2fa26856",
    "metadata": {},
    "outputs": [],
@@ -23,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "72ae9d03",
    "metadata": {},
    "outputs": [],
@@ -37,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "762ffb2c",
    "metadata": {},
    "outputs": [],
@@ -56,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "69aa45fe",
    "metadata": {},
    "outputs": [],
@@ -78,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "7f2525ab",
    "metadata": {},
    "outputs": [
@@ -86,19 +99,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0_FRE_B2.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20201021-141102-014_L2A_T21NZG_C_V1-0/SENTINEL2A_20201021-141102-014_L2A_T21NZG_C_V1-0_FRE_B2.tif']\n"
+      "['/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0_FRE_B2.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20201021-141102-014_L2A_T21NZG_C_V1-0/SENTINEL2A_20201021-141102-014_L2A_T21NZG_C_V1-0_FRE_B2.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0_FRE_B2.tif']\n"
      ]
     }
    ],
    "source": [
-    "print(files[0 : 2])"
+    "print(files[0 : 3])"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "b26f29df",
    "metadata": {},
-   "source": []
+   "source": [
+    "Nous avons créé un numpy array dans lequel on spécifie tout les chemins d'accès pour la bande B3"
+   ]
   },
   {
    "cell_type": "code",
@@ -115,6 +130,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b91f7f2",
+   "metadata": {},
+   "source": [
+    "Nous avon crée un numpy array dans lequel on spécifie tout les chemins d'accès pour la bande B4"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "8ebc89c6",
@@ -126,6 +149,14 @@
     "    k=len(str(tif_files))\n",
     "    \n",
     "    files2[i]=path+'/'+files2[i]+'/'+str(tif_files)[2:(k-2)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ac2417c",
+   "metadata": {},
+   "source": [
+    "### Grâce à la fonction last_4chars on peut trier nos images par date d'acquisition afin de créer une pile de données sur toute la période d'étude."
    ]
   },
   {
@@ -161,21 +192,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "c12e61d6",
+   "cell_type": "markdown",
+   "id": "1938f8e2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0_FRE_B4.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0_FRE_B3.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0_FRE_B2.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0_FRE_B4.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0_FRE_B3.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0_FRE_B2.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0_FRE_B4.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0_FRE_B3.tif', '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0_FRE_B2.tif']\n"
-     ]
-    }
-   ],
    "source": [
-    "print(files3[0:9])"
+    "### Nous avons créé une pile de données avec les bandes B4 B3 B2 pour chaque image "
    ]
   },
   {
@@ -213,15 +234,15 @@
     "\n",
     "app = otbApplication.Registry.CreateApplication(\"ConcatenateImages\")\n",
     "\n",
-    "app.SetParameterStringList(\"il\", files3[0:24])\n",
-    "app.SetParameterString(\"out\", \"/home/fouzai/Bureau/Stack_B2B3B41.TIF\")\n",
+    "app.SetParameterStringList(\"il\", files3)\n",
+    "app.SetParameterString(\"out\", \"/home/fouzai/Bureau/Stack_B2B3B4.TIF\")\n",
     "\n",
     "app.ExecuteAndWriteOutput()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "c2c85687",
    "metadata": {},
    "outputs": [],
@@ -231,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "cf1cc75a",
    "metadata": {},
    "outputs": [],
@@ -240,8 +261,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aaf6fcd6",
+   "metadata": {},
+   "source": [
+    "Nous avon crée un numpy array dans lequel on spécifie tout les chemins d'accès pour les masques de nuage"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "ee605452",
    "metadata": {},
    "outputs": [],
@@ -250,8 +279,7 @@
     "\n",
     "file_list = os.listdir(\"/home/fouzai/Bureau/maja_sentinel2/21NZG\")\n",
     "\n",
-    "def last_4chars(x):\n",
-    "    return(x[11:19])\n",
+    "\n",
     "\n",
     "file=sorted(file_list, key = last_4chars)  \n",
     "for i in range(len(file)) :\n",
@@ -262,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "90b9a21c",
    "metadata": {},
    "outputs": [
@@ -271,21 +299,24 @@
       "text/plain": [
        "['/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0_MASK_cloud.TIF',\n",
        " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2B_20200916-141058-695_L2A_T21NZG_C_V1-0_MASK_cloud.TIF',\n",
-       " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0_MASK_cloud.TIF',\n",
-       " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20200926-141059-707_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2B_20200926-141059-707_L2A_T21NZG_C_V1-0_MASK_cloud.TIF',\n",
-       " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20201001-141102-675_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2A_20201001-141102-675_L2A_T21NZG_C_V1-0_MASK_cloud.TIF',\n",
-       " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20201006-141100-110_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2B_20201006-141100-110_L2A_T21NZG_C_V1-0_MASK_cloud.TIF',\n",
-       " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20201011-141102-730_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2A_20201011-141102-730_L2A_T21NZG_C_V1-0_MASK_cloud.TIF',\n",
-       " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2B_20201016-141100-691_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2B_20201016-141100-691_L2A_T21NZG_C_V1-0_MASK_cloud.TIF']"
+       " '/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0/MASKS/SENTINEL2A_20200921-141101-820_L2A_T21NZG_C_V1-0_MASK_cloud.TIF']"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "files[0:8]"
+    "files[0:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fe12ab1",
+   "metadata": {},
+   "source": [
+    "### Nous avons créé une pile de données avec les masques de nuage qui correspondent à chaque image créé dans la partie précédente. "
    ]
   },
   {
@@ -327,6 +358,22 @@
     "app.SetParameterString(\"out\", \"/home/fouzai/Bureau/Stack_Masques1.TIF\")\n",
     "\n",
     "app.ExecuteAndWriteOutput()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46a63bac",
+   "metadata": {},
+   "source": [
+    "### Création du produit Gap Filling, les paramètres d'entrée sont : \n",
+    "\n",
+    " * in   ==> Path vers le stack d'images\n",
+    " * mask ==> Path vers le stack de masques de nuage\n",
+    " * out  ==> Path vers la sortie du GapFilling\n",
+    " * comp ==> Nombre de bandes pour chaque image\n",
+    " * it   ==> Méthode d'interpolation (linéaire ou spline)\n",
+    " * id   ==> Path vers un fichier txt qui contient les dates des images en entrée (YYYYMMDD : format de la date)\n",
+    " * od   ==> Path vers un fichier txt qui contient la date de sortie du Gap Filling (YYYYMMDD : format de la date)"
    ]
   },
   {
@@ -376,14 +423,6 @@
     "\n",
     "app.ExecuteAndWriteOutput()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6c3de0b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
