--- a/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
+++ b/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
@@ -10,7 +10,9 @@
     "La méthode du GapFilling permet de créer des images interpolées et désenuagées. Le GapFilling est une interpolation temporelle, elle reprend une grande partie, celle mise en place dans la chaîne de traitement automatique iota2 :\n",
     "\n",
     " * à l’aide de masques de nuages comme celles fournies pour le produit S2 de niveau L2A, remplacer les pixels « nuageux » par une estimation de la réflectance réelle, réalisée à partir des valeurs valides plus proches en date.\n",
-    " * effectuer un rééchantillonnage temporel, en réalisant le même type d’opération pour produire des séries temporelles couvrant régulièrement la période de référence"
+    " * effectuer un rééchantillonnage temporel, en réalisant le même type d’opération pour produire des séries temporelles couvrant régulièrement la période de référence\n",
+    " \n",
+    " <img src=\"gapfilling.png\" width=\"5000\" height=\"8000\" /> <legend align=\"center\" ></legend>"
    ]
   },
   {
@@ -42,8 +44,6 @@
    "outputs": [],
    "source": [
     "files = os.listdir('/home/fouzai/Bureau/maja_sentinel2/21NZG/')\n",
-    "files1 = os.listdir('/home/fouzai/Bureau/maja_sentinel2/21NZG/')\n",
-    "files2 = os.listdir('/home/fouzai/Bureau/maja_sentinel2/21NZG/')\n",
     "\n",
     "path='/home/fouzai/Bureau/maja_sentinel2/21NZG'"
    ]
@@ -422,6 +422,17 @@
     "app.SetParameterString(\"od\", \"/home/fouzai/Bureau/out.txt\")\n",
     "\n",
     "app.ExecuteAndWriteOutput()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff31ec4b",
+   "metadata": {},
+   "source": [
+    "## Exemples d'une synthèse Gapfilling sur des images Sentinel 2 :\n",
+    "\n",
+    "\n",
+    "<img src=\"gapfilling.gif\" width=\"450\" align=\"center\">"
    ]
   }
  ],
