--- a/notebook/Creation_Masque_Nuage_Landsat-Copy1.ipynb
+++ b/notebook/Creation_Masque_Nuage_Landsat-Copy1.ipynb
@@ -534,6 +534,14 @@
     "plt.figure(figsize=(12,12))\n",
     "plt.imshow(rgb[4900:5100, 3700:3900, 0:3])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3ee9d26",
+   "metadata": {},
+   "source": [
+    "### Ce notebook a été créé par Youssef Fouzai : youssef.fouzai@ird.fr"
+   ]
   }
  ],
  "metadata": {
