--- a/notebook/Creation_Masque_Nuage_Landsat.ipynb
+++ b/notebook/Creation_Masque_Nuage_Landsat.ipynb
@@ -512,12 +512,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37109269",
+   "cell_type": "markdown",
+   "id": "bdbdd3f3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ce notebook a été créé par Youssef Fouzai : youssef.fouzai@ird.fr"
+   ]
   }
  ],
  "metadata": {
