--- a/notebook/Extraction de la tache urbaine .ipynb
+++ b/notebook/Extraction de la tache urbaine .ipynb
@@ -379,6 +379,14 @@
     "    <center>Résultat de la tache urbaine sur la ville de Cayenne ( TU : couleur rouge)</center>\n",
     "</p> \n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc9115d7",
+   "metadata": {},
+   "source": [
+    "### Ce notebook a été créé par Youssef Fouzai : youssef.fouzai@ird.fr"
+   ]
   }
  ],
  "metadata": {
