--- a/notebook/Creation_Masque_Nuage_SentinelS2_MAJA.ipynb
+++ b/notebook/Creation_Masque_Nuage_SentinelS2_MAJA.ipynb
@@ -549,12 +549,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6195e740",
+   "cell_type": "markdown",
+   "id": "11920a8e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ce notebook a été créé par Youssef Fouzai : youssef.fouzai@ird.fr"
+   ]
   }
  ],
  "metadata": {
