--- a/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
+++ b/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
@@ -1450,12 +1450,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a7d0594",
+   "cell_type": "markdown",
+   "id": "1ca85d75",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Ce notebook a été créé par Youssef Fouzai : youssef.fouzai@ird.fr"
+   ]
   }
  ],
  "metadata": {
