--- a/notebook/Creation_Masque_Nuage_SentinelS2_MAJA.ipynb
+++ b/notebook/Creation_Masque_Nuage_SentinelS2_MAJA.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "515268cc",
    "metadata": {},
    "outputs": [],
@@ -66,28 +66,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d34dfcf6",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/MASKS'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-d1758c2601cb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0md_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0md_img\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"MASKS\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mtif_files\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0md_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md_img\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".tif\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mtif_files\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/MASKS'"
-     ]
+     "data": {
+      "text/plain": [
+       "['SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R1-D07.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_MG2_R1.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_SAT_R2.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_SAT_R1.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R2-D04.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R1-D06.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DFP_R2.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_EDG_R2.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DFP_R1.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R2-D02.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R2-D03.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_CLM_R1.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R1-D02.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R1-D04.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_IAB_R1.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R1-D03.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R2-D06.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_IAB_R2.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R2-D05.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R1-D05.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_MG2_R2.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R2-D08.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_CLM_R2.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_EDG_R1.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R1-D08.tif',\n",
+       " 'SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_DTF_R2-D07.tif']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# liste des données (*.TIF)\n",
     "# dans data/LC08_L1TP_228056_20130714_20200912_02_T1\n",
-    "d_data = \"/home/fouzai/Bureau/maja_sentinel2/21NZG/SENTINEL2A_20200911-141100-719_L2A_T21NZG_C_V1-0/\"\n",
+    "d_data = \"/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6/\"\n",
     "d_img = \"MASKS\"\n",
     "tif_files = [f for f in listdir(join(d_data, d_img)) if f.endswith(\".tif\")]\n",
     "tif_files\n"
