--- a/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
+++ b/notebook/TimeSeriesImageGapFilling_SentinelS2.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "id": "2fa26856",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 2,
    "id": "72ae9d03",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 3,
    "id": "762ffb2c",
    "metadata": {},
    "outputs": [],
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "id": "7d201e20",
    "metadata": {},
    "outputs": [
@@ -106,17 +106,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>58</td>\n",
-       "      <td>SENTINEL2A_20170924-140106-498_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-09-24</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>52</th>\n",
        "      <td>52</td>\n",
        "      <td>SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1...</td>\n",
@@ -133,326 +122,20 @@
       ],
       "text/plain": [
        "    Unnamed: 0                                             idprod    dateprod  \\\n",
-       "58          58  SENTINEL2A_20170924-140106-498_L2A_T22NCL_D_V1...  2017-09-24   \n",
        "52          52  SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1...  2018-02-06   \n",
        "\n",
        "    yearprod  monthprod  surf_nuage  surf_total   p_nuage  \n",
-       "58      2017          9           0      639796  0.000000  \n",
        "52      2018          2        4322      639796  0.675528  "
       ]
      },
-     "execution_count": 101,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rslt_df = df[df['p_nuage'] < 5]\n",
-    "rslt_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "id": "22ef4577",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>idprod</th>\n",
-       "      <th>dateprod</th>\n",
-       "      <th>yearprod</th>\n",
-       "      <th>monthprod</th>\n",
-       "      <th>surf_nuage</th>\n",
-       "      <th>surf_total</th>\n",
-       "      <th>p_nuage</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>12</td>\n",
-       "      <td>SENTINEL2A_20170606-140102-464_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-06-06</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>6</td>\n",
-       "      <td>553837</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>86.564624</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>69</td>\n",
-       "      <td>SENTINEL2A_20170616-140052-457_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-06-16</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>6</td>\n",
-       "      <td>38588</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>6.031297</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>13</td>\n",
-       "      <td>SENTINEL2A_20170626-140059-456_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-06-26</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>6</td>\n",
-       "      <td>616581</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>96.371500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>55</th>\n",
-       "      <td>55</td>\n",
-       "      <td>SENTINEL2B_20170701-140052-460_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-07-01</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>100.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>63</th>\n",
-       "      <td>63</td>\n",
-       "      <td>SENTINEL2A_20170706-140051-462_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-07-06</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "      <td>455999</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>71.272562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40</th>\n",
-       "      <td>40</td>\n",
-       "      <td>SENTINEL2B_20170711-140101-458_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-07-11</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "      <td>637914</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>99.705844</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>68</td>\n",
-       "      <td>SENTINEL2B_20170721-140052-456_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-07-21</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "      <td>517389</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>80.867808</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>14</td>\n",
-       "      <td>SENTINEL2A_20170726-140053-458_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-07-26</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "      <td>288129</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>45.034511</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>29</td>\n",
-       "      <td>SENTINEL2B_20170731-140100-457_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-07-31</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>7</td>\n",
-       "      <td>256878</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>40.149985</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>18</td>\n",
-       "      <td>SENTINEL2A_20170805-140102-458_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-08-05</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>8</td>\n",
-       "      <td>443747</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>69.357576</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>22</td>\n",
-       "      <td>SENTINEL2B_20170810-140050-459_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-08-10</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>8</td>\n",
-       "      <td>387024</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>60.491782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48</th>\n",
-       "      <td>48</td>\n",
-       "      <td>SENTINEL2A_20170815-140053-457_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-08-15</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>8</td>\n",
-       "      <td>354316</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>55.379527</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>SENTINEL2A_20170825-140101-462_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-08-25</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>8</td>\n",
-       "      <td>353927</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>55.318727</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>5</td>\n",
-       "      <td>SENTINEL2B_20170830-140046-456_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-08-30</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>8</td>\n",
-       "      <td>357403</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>55.862025</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>67</td>\n",
-       "      <td>SENTINEL2A_20170904-140051-456_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-09-04</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>9</td>\n",
-       "      <td>526004</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>82.214331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47</th>\n",
-       "      <td>47</td>\n",
-       "      <td>SENTINEL2B_20170909-140052-461_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-09-09</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>9</td>\n",
-       "      <td>133159</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>20.812728</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>21</td>\n",
-       "      <td>SENTINEL2B_20170919-140040-456_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-09-19</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>9</td>\n",
-       "      <td>277744</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>43.411337</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>58</td>\n",
-       "      <td>SENTINEL2A_20170924-140106-498_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-09-24</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>0.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>26</td>\n",
-       "      <td>SENTINEL2B_20170929-140045-464_L2A_T22NCL_D_V1...</td>\n",
-       "      <td>2017-09-29</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>9</td>\n",
-       "      <td>498721</td>\n",
-       "      <td>639796</td>\n",
-       "      <td>77.950003</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    Unnamed: 0                                             idprod    dateprod  \\\n",
-       "12          12  SENTINEL2A_20170606-140102-464_L2A_T22NCL_D_V1...  2017-06-06   \n",
-       "69          69  SENTINEL2A_20170616-140052-457_L2A_T22NCL_D_V1...  2017-06-16   \n",
-       "13          13  SENTINEL2A_20170626-140059-456_L2A_T22NCL_D_V1...  2017-06-26   \n",
-       "55          55  SENTINEL2B_20170701-140052-460_L2A_T22NCL_D_V1...  2017-07-01   \n",
-       "63          63  SENTINEL2A_20170706-140051-462_L2A_T22NCL_D_V1...  2017-07-06   \n",
-       "40          40  SENTINEL2B_20170711-140101-458_L2A_T22NCL_D_V1...  2017-07-11   \n",
-       "68          68  SENTINEL2B_20170721-140052-456_L2A_T22NCL_D_V1...  2017-07-21   \n",
-       "14          14  SENTINEL2A_20170726-140053-458_L2A_T22NCL_D_V1...  2017-07-26   \n",
-       "29          29  SENTINEL2B_20170731-140100-457_L2A_T22NCL_D_V1...  2017-07-31   \n",
-       "18          18  SENTINEL2A_20170805-140102-458_L2A_T22NCL_D_V1...  2017-08-05   \n",
-       "22          22  SENTINEL2B_20170810-140050-459_L2A_T22NCL_D_V1...  2017-08-10   \n",
-       "48          48  SENTINEL2A_20170815-140053-457_L2A_T22NCL_D_V1...  2017-08-15   \n",
-       "0            0  SENTINEL2A_20170825-140101-462_L2A_T22NCL_D_V1...  2017-08-25   \n",
-       "5            5  SENTINEL2B_20170830-140046-456_L2A_T22NCL_D_V1...  2017-08-30   \n",
-       "67          67  SENTINEL2A_20170904-140051-456_L2A_T22NCL_D_V1...  2017-09-04   \n",
-       "47          47  SENTINEL2B_20170909-140052-461_L2A_T22NCL_D_V1...  2017-09-09   \n",
-       "21          21  SENTINEL2B_20170919-140040-456_L2A_T22NCL_D_V1...  2017-09-19   \n",
-       "58          58  SENTINEL2A_20170924-140106-498_L2A_T22NCL_D_V1...  2017-09-24   \n",
-       "26          26  SENTINEL2B_20170929-140045-464_L2A_T22NCL_D_V1...  2017-09-29   \n",
-       "\n",
-       "    yearprod  monthprod  surf_nuage  surf_total     p_nuage  \n",
-       "12      2017          6      553837      639796   86.564624  \n",
-       "69      2017          6       38588      639796    6.031297  \n",
-       "13      2017          6      616581      639796   96.371500  \n",
-       "55      2017          7      639796      639796  100.000000  \n",
-       "63      2017          7      455999      639796   71.272562  \n",
-       "40      2017          7      637914      639796   99.705844  \n",
-       "68      2017          7      517389      639796   80.867808  \n",
-       "14      2017          7      288129      639796   45.034511  \n",
-       "29      2017          7      256878      639796   40.149985  \n",
-       "18      2017          8      443747      639796   69.357576  \n",
-       "22      2017          8      387024      639796   60.491782  \n",
-       "48      2017          8      354316      639796   55.379527  \n",
-       "0       2017          8      353927      639796   55.318727  \n",
-       "5       2017          8      357403      639796   55.862025  \n",
-       "67      2017          9      526004      639796   82.214331  \n",
-       "47      2017          9      133159      639796   20.812728  \n",
-       "21      2017          9      277744      639796   43.411337  \n",
-       "58      2017          9           0      639796    0.000000  \n",
-       "26      2017          9      498721      639796   77.950003  "
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "rslt_df = df[df['yearprod'] == 2017]\n",
+    "rslt_df = rslt_df[rslt_df['yearprod'] == 2018]\n",
     "rslt_df"
    ]
   },
@@ -1193,38 +876,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 107,
-   "id": "79e6a4c8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1-4/SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1-4_FRE_B4.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1-4/SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1-4_FRE_B3.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1-4/SENTINEL2B_20180206-140045-459_L2A_T22NCL_D_V1-4_FRE_B2.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6/SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_FRE_B4.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6/SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_FRE_B3.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6/SENTINEL2A_20180313-140048-462_L2A_T22NCL_D_V1-6_FRE_B2.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2A_20180731-140053-455_L2A_T22NCL_D_V1-8/SENTINEL2A_20180731-140053-455_L2A_T22NCL_D_V1-8_FRE_B4.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2A_20180731-140053-455_L2A_T22NCL_D_V1-8/SENTINEL2A_20180731-140053-455_L2A_T22NCL_D_V1-8_FRE_B3.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2A_20180731-140053-455_L2A_T22NCL_D_V1-8/SENTINEL2A_20180731-140053-455_L2A_T22NCL_D_V1-8_FRE_B2.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2B_20180914-140043-462_L2A_T22NCL_D_V1-9/SENTINEL2B_20180914-140043-462_L2A_T22NCL_D_V1-9_FRE_B4.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2B_20180914-140043-462_L2A_T22NCL_D_V1-9/SENTINEL2B_20180914-140043-462_L2A_T22NCL_D_V1-9_FRE_B3.tif',\n",
-       " '/home/fouzai/Progysat_tache_urbaine/cayenne/images_sentinel2_maja/22NCL/SENTINEL2B_20180914-140043-462_L2A_T22NCL_D_V1-9/SENTINEL2B_20180914-140043-462_L2A_T22NCL_D_V1-9_FRE_B2.tif']"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "files3"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "1938f8e2",
    "metadata": {},
@@ -1456,6 +1107,14 @@
    "source": [
     "### Ce notebook a été créé par Youssef Fouzai : youssef.fouzai@ird.fr"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02ab84cc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
